--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,8 +20,8 @@
   <header>
     <div class="header-logo-container">
       <a href="/">
-        <img 
-        src="{% static 'images/happy-dog.svg' %}"
+        <img class='logo_img'
+        src="{% static 'images/logo.svg' %}"
         alt="The Dog Collector Logo"
       >
       </a>
