--- a/main_app/templates/dogs/index.html
+++ b/main_app/templates/dogs/index.html
@@ -5,7 +5,7 @@
 <link 
   rel="stylesheet"
   type="text/css"
-  href="{% static 'css/cats/cat-index.css' %}"
+  href="{% static 'css/dogs/dog-index.css' %}"
 />
 {% endblock %}
 
@@ -25,7 +25,7 @@
       <div class="card-content">
         <div class="card-img-container">
           <img 
-            src="{% static 'images/cool-dog.svg' %}" 
+            src="{% static 'images/happy-dog.svg' %}" 
             alt="happydog"
           >
         </div>
