--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,7 +21,7 @@
     <div class="header-logo-container">
       <a href="/">
         <img class='logo_img'
-        src="{% static 'images/logo.svg' %}"
+        src="{% static 'images/' %}"
         alt="The Dog Collector Logo"
       >
       </a>
