--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -9,10 +9,10 @@
 
 <section class="logo-container">
   <div class="dog-container">
-    <img src="{% static 'images/splash.svg' %}" alt="The Dog Collector Dog" />
+    <img src="{% static '' %}" alt="The Dog Collector Dog" />
   </div>
   <img 
-    src="{% static 'images/logotype.svg' %}" 
+    src="{% static 'images/' %}" 
     alt="Text reads: Dog Collector"
   />
 </section>
