--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,8 +28,8 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/dogs">All dogs</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="{% url 'dog_index' %}">All dogs</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
   </header>
