add a dog form created

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,6 +29,7 @@
     <nav>
       <ul>
         <li><a href="{% url 'dog_index' %}">All dogs</a></li>
+        <li><a href="{% url 'dogs_create' %}">Add a Dog</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
