--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -23,15 +23,12 @@
     {% if dog.age > 0 %}
       <h2>A {{ dog.age }} year old {{ dog.breed }}</h2>
     {% else %}
-      <h2>A {{ dog.breed }} kitten.</h2>
+      <h2>A {{ dog.breed }} puppy.</h2>
     {% endif %}
     <p>{{ dog.description }}</p>
-    {% comment %} New markup {% endcomment %}
-    <div class="dog-actions">
+    <div class='dog-actions'>
       <a href="{% url 'dogs_update' dog.id %}" class="btn warn">Edit</a>
-      <a href="{% url 'dogs_delete' dog.id %}" class="btn danger">Delete</a>
-    </div>
-    {% comment %} New markup above {% endcomment %}
+      <a href="{% url 'dogs_delete' dog.id %}" class="btn warn">Delete</a>
   </div>
 </section>
 
