--- a/main_app/templates/main_app/dog_form.html
+++ b/main_app/templates/main_app/dog_form.html
@@ -6,9 +6,12 @@
 {% endblock %}
 
 {% block content %}
-
+{% if dog %}
+  <h1>Edit {{dog.name}}</h1>
+{% else %}
 <div class="page-header">
   <h1>Add a Dog</h1>
+{% endif %}
   <img src="{% static 'images/nerd-dog.svg' %}" alt="A dog using a computer"/>
 </div>
 {% comment %} 
