--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -31,5 +31,38 @@
       <a href="{% url 'dogs_delete' dog.id %}" class="btn warn">Delete</a>
   </div>
 </section>
+<div class="walks-toy-container">
+  <section class="walks">
+    <div class="subsection-title">
+      <h2>Walks</h2>
+      <img 
+        src="{% static 'images/dog-cone.svg' %}" 
+        alt="An ice cream cone dog"
+      />
+      <img 
+        src="{% static 'images/dog-onigiri.svg' %}"
+        alt="A dog as onigiri"
+      />
+      <img 
+        src="{% static 'images/kitty-kabob.svg' %}" 
+        alt="A kabob of kittens"
+      />
+    </div>
+    <table>
+      <thead>
+        <tr><th>Date</th><th>Miles</th></tr>
+      </thead>
+      <tbody>
+        {% for walk in dog.walks_set.all %}
+          <tr>
+            <td>{{walk.date}}</td>
+            <td>{{walk.get_meal_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </section>
+</div>
+
 
 {% endblock %}
