add walking form

--- a/main_app/templates/dogs/index.html
+++ b/main_app/templates/dogs/index.html
@@ -26,7 +26,7 @@
         <div class="card-content">
           <div class="card-img-container">
             <img 
-              src="{% static 'images/happy-dog.svg' %}" 
+              src="{% static 'images/sk8r-boi-cat.svg' %}" 
               alt="happydog"
             >
           </div>
