--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -48,6 +48,15 @@
         alt="A kabob of kittens"
       />
     </div>
+    <h3>Add a Walk</h3>
+    <form action=""
+    method='post'
+    class='subsection-content'>
+      {% csrf_token %}
+      {{ walking_form.as_p }}
+      <button type="submit" class="btn submit">Add Walk</button>
+    </form>
+    <h3>Past Walks</h3>
     <table>
       <thead>
         <tr><th>Date</th><th>Miles</th></tr>
