--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -3,10 +3,21 @@
 
 {% block head %}
 <link 
+  href="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.css" 
+  rel="stylesheet" 
+/>
+<link rel="stylesheet" href="{% static 'css/mcdp.css' %}">
+<script 
+  src="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.js"
+>
+</script>
+<link 
   rel="stylesheet" 
   type="text/css" 
   href="{% static 'css/dogs/dog-detail.css' %}"
 />
+<script defer src="{% static 'js/dog-detail.js' %}"></script>
+
 {% endblock %}
 
 {% block content %}
@@ -51,7 +62,8 @@
     <h3>Add a Walk</h3>
     <form action=""
     method='post'
-    class='subsection-content'>
+    class='subsection-content'
+    autocomplete="off">
       {% csrf_token %}
       {{ walking_form.as_p }}
       <button type="submit" class="btn submit">Add Walk</button>
