--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -71,6 +71,7 @@
       <button type="submit" class="btn submit">Add Walk</button>
     </form>
     <h3>Past Walks</h3>
+    {% if dog.walks_set.all.count %}
     <table>
       <thead>
         <tr><th>Date</th><th>Miles</th></tr>
@@ -84,6 +85,11 @@
         {% endfor %}
       </tbody>
     </table>
+    {% else %}
+    <div class="subsection-content">
+      <p>{{dog.name}} has never been walked 😔</p>
+    </div>
+    {% endif %}
   </section>
 </div>
 
