update and delete toy

--- a/main_app/templates/main_app/toy_detail.html
+++ b/main_app/templates/main_app/toy_detail.html
@@ -18,7 +18,7 @@
     <p>A {{ toy.color }} toy</p>
   </div>
 </div>
-{% comment %} <a href="{% url 'toys_update' toy.id %}" class="btn warn">Edit</a>
-<a href="{% url 'toys_delete' toy.id %}" class="btn danger">Delete</a> {% endcomment %}
+<a href="{% url 'toys_update' toy.id %}" class="btn warn">Edit</a>
+<a href="{% url 'toys_delete' toy.id %}" class="btn danger">Delete</a>
 
 {% endblock %}
