--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -95,8 +95,33 @@
       <p>{{dog.name}} has never been walked 😔</p>
     </div>
     {% endif %}
-  </section>
-</div>
+    <section class="toys">
+      <div class="subsection-title">
+        <h2>Toys</h2>
+      </div>
+      <h3>{{ dog.name }}'s Toys</h3>
+      <div class="subsection-content">
+        {% if dog.toys.count %}
+          {% for toy in dog.toys.all %}
+            <div class="toy-container">
+              <div 
+                class="color-block"
+                style="background-color: {{ toy.color }}"
+              ></div>
+              <a href="{% url 'toys_detail' toy.id %}">
+                <p>A {{ toy.color }} {{ toy.name }}</p>
+              </a>
+            </div>
+          {% endfor %}
+        {% else %}
+          <p class="no-toys">{{dog.name}} doesn't have any toys 😞</p>
+        {% endif %}
+      </div>
+      <h3>Available Toys</h3>
+      <div class="subsection-content">
+      </div>
+    </section>
+  </div>
 
 
 {% endblock %}
