--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -118,8 +118,30 @@
         {% endif %}
       </div>
       <h3>Available Toys</h3>
-      <div class="subsection-content">
-      </div>
+        <div class="subsection-content">
+          {% comment %} We'll display available toys here {% endcomment %}
+          {% if toys.count %}
+            {% for toy in toys.all %}
+              <div class="toy-container">
+                <div 
+                  class="color-block"
+                  style="background-color: {{ toy.color }}"
+                ></div>
+                <a href="{% url 'toys_detail' toy.id %}">
+                  <p>A {{ toy.color }} {{ toy.name }}</p>
+                </a>
+                <form action="" method="post">
+                  {% csrf_token %}
+                  <button type="submit" class="btn submit">Give toy</button>
+                </form>
+              </div>
+            {% endfor %}
+          {% else %}
+            <p class="all-toys">
+              {{cat.name}} already has all the available toys 🥳
+            </p>
+          {% endif %}
+        </div>
     </section>
   </div>
 
