--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,11 +28,17 @@
     </div>
     <nav>
       <ul>
-        <li><a href="{% url 'dog_index' %}">All dogs</a></li>
-        <li><a href="{% url 'toys_index' %}">All Toys</a></li>
-        <li><a href="{% url 'dogs_create' %}">Add a Dog</a></li>
-        <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
-        <li><a href="{% url 'about' %}">About</a></li>
+        {% if user.is_authenticated %}
+          <li><a href="{% url 'dog_index' %}">All dogs</a></li>
+          <li><a href="{% url 'toys_index' %}">All Toys</a></li>
+          <li><a href="{% url 'dogs_create' %}">Add a Dog</a></li>
+          <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'logout' %}">Log out</a></li>
+        {% else %}
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'home' %}">Login</a></li>
+        {% endif %}
       </ul>
     </nav>
   </header>
