--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -137,7 +137,7 @@
             {% endfor %}
           {% else %}
             <p class="all-toys">
-              {{cat.name}} already has all the available toys 🥳
+              {{dog.name}} already has all the available toys 🥳
             </p>
           {% endif %}
         </div>
