--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -12,7 +12,7 @@
     <img src="{% static '' %}" alt="The Dog Collector Dog" />
   </div>
   <img 
-    src="{% static 'images/' %}" 
+    src="{% static 'images/splash.svg' %}" 
     alt="Text reads: Dog Collector"
   />
 </section>
