--- a/main_app/templates/main_app/toy_list.html
+++ b/main_app/templates/main_app/toy_list.html
@@ -12,11 +12,10 @@
 {% block content %}
 
 <section class="page-header">
-  <h1>All Cat Toys</h1>
-  <img src="{% static 'images/string.svg' %}" alt="A ball of string" />
-  <img src="{% static 'images/mouse.svg' %}" alt="A mouse" />
-  <img src="{% static 'images/post.svg' %}" alt="A scratching post" />
-  <img src="{% static 'images/fish.svg' %}" alt="A fishy toy" />
+  <h1>All Dog Toys</h1>
+  <img src="{% static 'images/bowl.jpeg' %}" alt="A ball of string" />
+  <img src="{% static 'images/ball.jpeg' %}" alt="A mouse" />
+  <img src="{% static 'images/bone.png' %}" alt="A scratching post" />
 </section>
 
 <section class="card-container">
