--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -94,7 +94,9 @@ nav li {
 }
 
 .logo_img {
-  height: 10px;
+  height: 30px;
+  width: 30%;
+  padding-bottom: 10px;
 }
 
 .header-logo-container {
