fix login route error

--- a/main_app/static/css/dogs/dog-index.css
+++ b/main_app/static/css/dogs/dog-index.css
@@ -37,7 +37,10 @@
   margin: 5px 0;
   font-size: var(--font-reg);
 }
+.page-header > img:nth-child(odd){
+  height: 170px;
+}
 
-.card-img-container > img{
-height: 40vh;
+.card-img-container  img{
+height: 30vh;
 }
