--- a/main_app/templates/dogs/index.html
+++ b/main_app/templates/dogs/index.html
@@ -13,10 +13,10 @@
 
 <section class="page-header">
   <h1>Dog List</h1>
-  <img src="{% static 'images/cool-dog.svg' %}" alt="A cool dog" />
-  <img src="{% static 'images/happy-dog.svg' %}" alt="A happy dog" />
-  <img src="{% static 'images/cool-dog.svg' %}" alt="A cool dog" />
-  <img src="{% static 'images/happy-dog.svg' %}" alt="A happy dog" />
+  <img src="{% static 'images/cool-dog.jpeg' %}" alt="A cool dog" />
+  <img src="{% static 'images/nice-dog.jpeg' %}" alt="A happy dog" />
+  <img src="{% static 'images/cool-dog.jpeg' %}" alt="A cool dog" />
+  <img src="{% static 'images/nice-dog.jpeg' %}" alt="A happy dog" />
 </section>
 
 <section class="card-container">
