--- a/main_app/templates/main_app/dog_confirm_delete.html
+++ b/main_app/templates/main_app/dog_confirm_delete.html
@@ -5,7 +5,7 @@
 
 <div class="page-header">
   <h1>Delete Dog?</h1>
-  <img src="{% static 'images/nerd-dog.svg' %}" alt="A dog using a computer"/>
+  <img src="{% static 'images/cool-dog.jpeg' %}" alt="A dog using a computer"/>
 </div>
 <h2>Are you sure you want to delete {{ dog.name }}?</h2>
 
