--- a/main_app/static/css/dogs/dog-detail.css
+++ b/main_app/static/css/dogs/dog-detail.css
@@ -1,6 +1,3 @@
-*{
-  background-color: red;
-}
 .dog-container {
   padding: 35px 30px;
   display: flex;
@@ -12,6 +9,11 @@
 .dog-img {
   width: 75%;
   max-width: 350px;
+  margin-right: 100px;
+}
+.dog-img img{
+  height: 40vh;
+  
 }
 
 .usr-img {
@@ -21,13 +23,14 @@
 
 .dog-details {
   width: 98%;
+  margin-left: 60px ;
 }
 
 .dog-actions {
   margin-top: 20px;
 }
 
-.feedings-toy-container {
+.walks-toy-container {
   display: flex;
   flex-direction: column;
   padding-bottom: 20px;
@@ -57,20 +60,20 @@
   margin-right: 10px;
 }
 
-.unfed,
-.fed,
+.unwalked,
+.walked,
 .no-toys,
 .all-toys {
   margin: 0;
   font-weight: bold;
 }
 
-.unfed,
+.unwalked,
 .no-toys {
   color: var(--danger);
 }
 
-.fed,
+.walked,
 .all-toys {
   color: var(--submit);
 }
@@ -97,7 +100,7 @@
   margin: 5px 0;
 }
 
-.feedings-toy-container > section {
+.walks-toy-container > section {
   width: 80%;
   min-width: 360px;
   border: var(--borders);
@@ -119,13 +122,13 @@
   margin-left: 16px;
 }
 
-.feedings h2,
+.walks h2,
 .toys h2 {
   font-size: 3.2rem;
   margin: 0;
 }
 
-.feedings h3,
+.walks h3,
 .toys h3 {
   font-size: var(--font-xl);
   margin: 10px 0;
@@ -143,25 +146,25 @@
   padding: 3px;
 }
 
-.feedings table {
+.walks table {
   width: calc(100% - 16px);
   text-align: left;
   border-collapse: collapse;
   margin: 0 8px;
 }
 
-.feedings td {
+.walks td {
   padding: 8px 5px;
   font-size: var(--font-reg);
 }
 
-.feedings th {
+.walks th {
   font-size: var(--font-l);
   padding: 5px 5px 0;
   border-bottom: rgb(36, 116, 248) solid 2px;
 }
 
-.feedings tr:nth-child(even) {
+.walks tr:nth-child(even) {
   background-color: #f3f3fd;
 }
 
@@ -204,19 +207,19 @@
     margin-right: 25px;
   }
 
-  .feedings-toy-container {
+  .walks-toy-container {
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-start;
   }
 
-  .feedings-toy-container > section {
+  .walks-toy-container > section {
     width: 45%;
   }
 }
 
 @media only screen and (min-width: 1024px) {
-  .feedings-toy-container {
+  .walks-toy-container {
     padding: 0 40px;
   }
 }
